fixed hero description text align

--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -29,6 +29,10 @@
   font-size: 8rem;
 }
 
+.hero__description {
+  text-align: left;
+}
+
 p {
   margin: 3rem 0;
 }
